--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -81,7 +81,7 @@
                 </div>
                 <div>
                     <span class="text-secondary">Address:</span>
-                    Lagos
+                    Lagos, Nigeria
                 </div>
             </div>
 
