--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -8,63 +8,66 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
         crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
-    <title>Welcome to Adebayo's World</title>
+    <title>Adebayo's Portfolio</title>
 </head>
 
-<body id="bg-img">
-    <div class="slide slide0">
-        <nav id="navbar" class="nav-grid">
-            <div class="branding">
-                <a href="index.html">
-                    <img src="img/branding.png">
+<body>
+
+    <!--Header & Navigation links-->
+    <nav id="navbar" class="nav-grid">
+        <div class="branding">
+            <a href="index.html">
+                <img src="img/branding.png">
+            </a>
+        </div>
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a href="index.html" class="nav-link menu0 current">
+                    Home
                 </a>
-            </div>
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a href="index.html" class="nav-link menu0 current">
-                        Home
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="projects.html" class="nav-link menu1">
-                        Projects
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="contact.html" class="nav-link menu2">
-                        Contact
-                    </a>
-                </li>
-            </ul>
+            </li>
+            <li class="nav-item">
+                <a href="#work" class="nav-link menu1">
+                    Projects
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="#contact" class="nav-link menu2">
+                    Contact
+                </a>
+            </li>
+        </ul>
 
-            <ul class="social-icons">
-                <li>
-                    <a href="https://m.facebook.com/daramola.adebayo">
-                        <i class="fab fa-facebook fa-2x"></i>
-                    </a>
-                </li>
+        <ul class="social-icons">
+            <li>
+                <a href="https://m.facebook.com/daramola.adebayo">
+                    <i class="fab fa-facebook fa-2x"></i>
+                </a>
+            </li>
 
-                <li>
-                    <a href="https://mobile.twitter.com/baystizzle">
-                        <i class="fab fa-twitter fa-2x"></i>
-                    </a>
-                </li>
+            <li>
+                <a href="https://mobile.twitter.com/baystizzle">
+                    <i class="fab fa-twitter fa-2x"></i>
+                </a>
+            </li>
 
-                <li>
-                    <a href="https://github.com/Baystef">
-                        <i class="fab fa-github fa-2x"></i>
-                    </a>
-                </li>
+            <li>
+                <a href="https://github.com/Baystef">
+                    <i class="fab fa-github fa-2x"></i>
+                </a>
+            </li>
 
-                <li>
-                    <a href="https://www.linkedin.com/in/adebayo-daramola-31b852b3">
-                        <i class="fab fa-linkedin fa-2x"></i>
-                    </a>
-                </li>
-            </ul>
-        </nav>
+            <li>
+                <a href="https://www.linkedin.com/in/adebayo-daramola-31b852b3">
+                    <i class="fab fa-linkedin fa-2x"></i>
+                </a>
+            </li>
+        </ul>
+    </nav>
 
-        <main id="welcome-section">
+    <!--Welcome Section-->
+    <main>
+        <section id="welcome-section" class="bg-img">
             <h1 class="greeting">
                 <span class="text-secondary">
                     Hello!
@@ -77,8 +80,75 @@
                 <h2>I'm a</h2>
                 <h2 class="text-secondary">Web & UI Designer</h2>
             </div>
-        </main>
-    </div>
+        </section>
+
+
+        <!--Projects-->
+        <section id="work">
+            <h1 class="intro">
+                <span class="text-secondary">
+                    Projects
+                </span>
+            </h1>
+
+            <div class="projects">
+                <div class="project-tile">
+                    <a href="#">
+                        <img src="img/projects/project1.jpg" alt="project">
+                    </a>
+                </div>
+                <div class="project-tile">
+                    <a href="#">
+                        <img src="img/projects/project2.jpg" alt="project">
+                    </a>
+                </div>
+                <div class="project-tile">
+                    <a href="#">
+                        <img src="img/projects/project3.jpg" alt="project">
+                    </a>
+                </div>
+                <div class="project-tile">
+                    <a href="#">
+                        <img src="img/projects/project4.jpg" alt="project">
+                    </a>
+                </div>
+                <div class="project-tile">
+                    <a href="#">
+                        <img src="img/projects/project5.jpg" alt="project">
+                    </a>
+                </div>
+            </div>
+        </section>
+
+        <!--Contact-->
+        <section id="contact">
+            <h1 class="intro">
+                <span class="text-secondary">
+                    Contact
+                </span>
+            </h1>
+            <div class="contact-details">
+                <div>
+                    <span class="text-secondary">Email:</span>
+                    daramola.adebayo@yahoo.com
+                </div>
+                <div>
+                    <span class="text-secondary">Phone:</span>
+                    +2347060771436
+                </div>
+                <div>
+                    <span class="text-secondary">Address:</span>
+                    Lagos, Nigeria
+                </div>
+            </div>
+        </section>
+
+
+    </main>
+
+    <footer>
+        <a href="freecodecamp.org/baystef">Daramola Adebayo</a> &copy;2018 All Rights Reserved
+    </footer>
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
