--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -67,7 +67,8 @@
 
     <!--Welcome Section-->
     <main>
-        <section id="welcome-section" class="bg-img">
+        <div class="bg-img">
+        <section id="welcome-section">
             <h1 class="greeting">
                 <span class="text-secondary">
                     Hello!
@@ -81,7 +82,7 @@
                 <h2 class="text-secondary">Web & UI Designer</h2>
             </div>
         </section>
-
+    </div>
 
         <!--Projects-->
         <section id="work">
