Contact details replaced with contact form and header image updated

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -68,21 +68,47 @@
     <!--Welcome Section-->
     <main>
         <div class="bg-img">
-        <section id="welcome-section">
-            <h1 class="greeting">
-                <span class="text-secondary">
-                    Hello!
-                </span>
-            </h1>
+            <section id="welcome-section">
+                <h1 class="greeting">
+                    <span class="text-secondary">
+                        Hello!
+                    </span>
+                </h1>
 
-            <div id="intro">
-                <h2>My name is</h2>
-                <h2 class="text-secondary">Adebayo</h2>
-                <h2>I'm a</h2>
-                <h2 class="text-secondary">Web & UI Designer</h2>
-            </div>
-        </section>
-    </div>
+                <div id="intro">
+                    <h2>My name is</h2>
+                    <h2 class="text-secondary">Adebayo</h2>
+                    <h2>I'm a</h2>
+                    <h2 class="text-secondary">Web & UI Designer</h2>
+                </div>
+
+                <ul class="social-icons-sm">
+                    <li>
+                        <a href="https://m.facebook.com/daramola.adebayo">
+                            <i class="fab fa-facebook fa-2x"></i>
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="https://mobile.twitter.com/baystizzle">
+                            <i class="fab fa-twitter fa-2x"></i>
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="https://github.com/Baystef">
+                            <i class="fab fa-github fa-2x"></i>
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="https://www.linkedin.com/in/adebayo-daramola-31b852b3">
+                            <i class="fab fa-linkedin fa-2x"></i>
+                        </a>
+                    </li>
+                </ul>
+            </section>
+        </div>
 
         <!--Projects-->
         <section id="work">
@@ -129,7 +155,16 @@
                 </span>
             </h1>
             <div class="contact-details">
-                <div>
+                <div class="container">
+                    <form action="" method="post">
+                        <input type="text" id="name" name="name" placeholder="Your Name">
+                        <input type="email" name="email" id="email" placeholder="YourEmail@email.com">
+                        <textarea name="subject" id="subject" placeholder="Tell me something...">
+                    </textarea>
+                        <input type="submit" value="Send">
+                    </form>
+                </div>
+                <!-- <div>
                     <span class="text-secondary">Email:</span>
                     daramola.adebayo@yahoo.com
                 </div>
@@ -140,7 +175,7 @@
                 <div>
                     <span class="text-secondary">Address:</span>
                     Lagos, Nigeria
-                </div>
+                </div> -->
             </div>
         </section>
 
@@ -148,7 +183,7 @@
     </main>
 
     <footer>
-        <a href="freecodecamp.org/baystef">Daramola Adebayo</a> &copy;2018 All Rights Reserved
+        <a href="freecodecamp.org/baystef" target="_blank">Daramola Adebayo</a> &copy;2018 All Rights Reserved
     </footer>
 
 
