Header text placed on top of header overlay

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -69,44 +69,47 @@
     <main>
         <div class="bg-img">
             <section id="welcome-section">
-                <h1 class="greeting">
-                    <span class="text-secondary">
-                        Hello!
-                    </span>
-                </h1>
+                <div class="section-overlay">
+                    <div class="welcome-section-text">
+                        <h1 class="greeting">
+                            <span class="text-secondary">
+                                Hello!
+                            </span>
+                        </h1>
 
-                <div id="intro">
-                    <h2>My name is</h2>
-                    <h2 class="text-secondary">Adebayo</h2>
-                    <h2>I'm a</h2>
-                    <h2 class="text-secondary">Web & UI Designer</h2>
+                        <div id="intro">
+                            <h2 class="text-primary">My name is</h2>
+                            <h2 class="text-secondary">Adebayo</h2>
+                            <h2 class="text-primary">I'm a</h2>
+                            <h2 class="text-secondary">Web & UI Designer</h2>
+                        </div>
+                    </div>
+                    <ul class="social-icons-sm">
+                        <li>
+                            <a href="https://m.facebook.com/daramola.adebayo">
+                                <i class="fab fa-facebook fa-2x"></i>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="https://mobile.twitter.com/baystizzle">
+                                <i class="fab fa-twitter fa-2x"></i>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="https://github.com/Baystef">
+                                <i class="fab fa-github fa-2x"></i>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="https://www.linkedin.com/in/adebayo-daramola-31b852b3">
+                                <i class="fab fa-linkedin fa-2x"></i>
+                            </a>
+                        </li>
+                    </ul>
                 </div>
-
-                <ul class="social-icons-sm">
-                    <li>
-                        <a href="https://m.facebook.com/daramola.adebayo">
-                            <i class="fab fa-facebook fa-2x"></i>
-                        </a>
-                    </li>
-
-                    <li>
-                        <a href="https://mobile.twitter.com/baystizzle">
-                            <i class="fab fa-twitter fa-2x"></i>
-                        </a>
-                    </li>
-
-                    <li>
-                        <a href="https://github.com/Baystef">
-                            <i class="fab fa-github fa-2x"></i>
-                        </a>
-                    </li>
-
-                    <li>
-                        <a href="https://www.linkedin.com/in/adebayo-daramola-31b852b3">
-                            <i class="fab fa-linkedin fa-2x"></i>
-                        </a>
-                    </li>
-                </ul>
             </section>
         </div>
 
@@ -164,18 +167,6 @@
                         <input type="submit" value="Send">
                     </form>
                 </div>
-                <!-- <div>
-                    <span class="text-secondary">Email:</span>
-                    daramola.adebayo@yahoo.com
-                </div>
-                <div>
-                    <span class="text-secondary">Phone:</span>
-                    +2347060771436
-                </div>
-                <div>
-                    <span class="text-secondary">Address:</span>
-                    Lagos, Nigeria
-                </div> -->
             </div>
         </section>
 
