Desktop and Mobile Navbar modified

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -16,7 +16,7 @@
     <!--Header & Navigation links-->
     <nav class="navbar js-nav">
         <span class="navbar-toggle" id="js-navbar-toggle">
-            <i class="fas fa-bars">☰ Menu</i>
+             <i class="fas fa-bars"></i> <!--☰ Menu -->
         </span>
         <div class="branding">
             <a href="index.html">
@@ -42,25 +42,25 @@
 
             <li class="social-icons">
                 <a href="https://m.facebook.com/daramola.adebayo">
-                    <i class="fab fa-facebook fa-2x">f</i>
+                    <i class="fab fa-facebook fa-2x"></i>
                 </a>
             </li>
 
             <li class="social-icons">
                 <a href="https://mobile.twitter.com/baystizzle">
-                    <i class="fab fa-twitter fa-2x">t</i>
+                    <i class="fab fa-twitter fa-2x"></i>
                 </a>
             </li>
 
             <li class="social-icons">
                 <a href="https://github.com/Baystef">
-                    <i class="fab fa-github fa-2x">g</i>
+                    <i class="fab fa-github fa-2x"></i>
                 </a>
             </li>
 
             <li class="social-icons">
                 <a href="https://www.linkedin.com/in/adebayo-daramola-31b852b3">
-                    <i class="fab fa-linkedin fa-2x">l</i>
+                    <i class="fab fa-linkedin fa-2x"></i>
                 </a>
             </li>
         </ul>
@@ -155,7 +155,7 @@
 
 
 
-    <!-- <script src="js/jquery.min.js"></script> -->
+    <script src="js/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
