--- a/index.html
+++ b/index.html
@@ -15,9 +15,13 @@
 
     <!--Header & Navigation links-->
     <nav class="navbar js-nav">
-        <span class="navbar-toggle" id="js-navbar-toggle">
-             <i class="fas fa-bars"></i> <!--☰ Menu -->
-        </span>
+        <!-- ☰ Menu -->
+            <div class="menu-btn navbar-toggle" id="js-navbar-toggle">
+                    <div class="btn-line"></div>
+                    <div class="btn-line"></div>
+                    <div class="btn-line"></div>
+                </div>
+        
         <div class="branding">
             <a href="index.html">
                 <img src="img/branding.png">
