--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -24,7 +24,7 @@
         
         <div class="branding">
             <a href="index.html">
-                <img src="img/branding.png">
+                <img src="img/branding.png" width="50px" height="50px">
             </a>
         </div>
         <ul class="navbar-nav" id="js-menu">
