navigation bar fixed

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -16,59 +16,62 @@
     <!--Header & Navigation links-->
     <nav class="navbar js-nav">
         <!-- ☰ Menu -->
-            <div class="menu-btn navbar-toggle" id="js-navbar-toggle">
-                    <div class="btn-line"></div>
-                    <div class="btn-line"></div>
-                    <div class="btn-line"></div>
-                </div>
-        
+        <div class="menu-btn navbar-toggle" id="js-navbar-toggle">
+            <div class="btn-line"></div>
+            <div class="btn-line"></div>
+            <div class="btn-line"></div>
+        </div>
+
         <div class="branding">
             <a href="index.html">
                 <img src="img/branding.png" width="50px" height="50px">
             </a>
         </div>
-        <ul class="navbar-nav" id="js-menu">
-            <li class="nav-item">
-                <a href="#home" data-value="home" class="nav-link menu0 current">
-                    Home
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="#work" data-value="work" class="nav-link menu1">
-                    Projects
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="#contact" data-value="contact" class="nav-link menu2">
-                    Contact
-                </a>
-            </li>
 
-            <li class="social-icons">
-                <a href="https://m.facebook.com/daramola.adebayo">
-                    <i class="fab fa-facebook fa-2x"></i>
-                </a>
-            </li>
+        
+            <ul class="navbar-nav" id="js-menu">
+                <li class="nav-item">
+                    <a href="#home" data-value="home" class="nav-link menu0 current">
+                        Home
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#work" data-value="work" class="nav-link menu1">
+                        Projects
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#contact" data-value="contact" class="nav-link menu2">
+                        Contact
+                    </a>
+                </li>
+            </ul>
 
-            <li class="social-icons">
-                <a href="https://mobile.twitter.com/baystizzle">
-                    <i class="fab fa-twitter fa-2x"></i>
-                </a>
-            </li>
+            <ul class="social-icons" id="js-menu-2">
+                <li class="social-icon">
+                    <a href="https://m.facebook.com/daramola.adebayo">
+                        <i class="fab fa-facebook fa-2x"></i>
+                    </a>
+                </li>
 
-            <li class="social-icons">
-                <a href="https://github.com/Baystef">
-                    <i class="fab fa-github fa-2x"></i>
-                </a>
-            </li>
+                <li class="social-icon">
+                    <a href="https://mobile.twitter.com/baystizzle">
+                        <i class="fab fa-twitter fa-2x"></i>
+                    </a>
+                </li>
 
-            <li class="social-icons">
-                <a href="https://www.linkedin.com/in/adebayo-daramola-31b852b3">
-                    <i class="fab fa-linkedin fa-2x"></i>
-                </a>
-            </li>
-        </ul>
+                <li class="social-icon">
+                    <a href="https://github.com/Baystef">
+                        <i class="fab fa-github fa-2x"></i>
+                    </a>
+                </li>
 
+                <li class="social-icon">
+                    <a href="https://www.linkedin.com/in/adebayo-daramola-31b852b3">
+                        <i class="fab fa-linkedin fa-2x"></i>
+                    </a>
+                </li>
+            </ul>
     </nav>
 
 
