social icons displaying properly on mobile, form hover effect removed.

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -28,50 +28,50 @@
             </a>
         </div>
 
-        
-            <ul class="navbar-nav" id="js-menu">
-                <li class="nav-item">
-                    <a href="#home" data-value="home" class="nav-link menu0 current">
-                        Home
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="#work" data-value="work" class="nav-link menu1">
-                        Projects
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="#contact" data-value="contact" class="nav-link menu2">
-                        Contact
-                    </a>
-                </li>
-            </ul>
 
-            <ul class="social-icons" id="js-menu-2">
-                <li class="social-icon">
-                    <a href="https://m.facebook.com/daramola.adebayo">
-                        <i class="fab fa-facebook fa-2x"></i>
-                    </a>
-                </li>
+        <ul class="navbar-nav" id="js-menu">
+            <li class="nav-item">
+                <a href="#home" data-value="home" class="nav-link menu0 current">
+                    Home
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="#work" data-value="work" class="nav-link menu1">
+                    Projects
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="#contact" data-value="contact" class="nav-link menu2">
+                    Contact
+                </a>
+            </li>
+        </ul>
 
-                <li class="social-icon">
-                    <a href="https://mobile.twitter.com/baystizzle">
-                        <i class="fab fa-twitter fa-2x"></i>
-                    </a>
-                </li>
+        <ul class="social-icons" id="js-menu-2">
+            <li class="social-icon">
+                <a href="https://m.facebook.com/daramola.adebayo">
+                    <i class="fab fa-facebook fa-2x"></i>
+                </a>
+            </li>
 
-                <li class="social-icon">
-                    <a href="https://github.com/Baystef">
-                        <i class="fab fa-github fa-2x"></i>
-                    </a>
-                </li>
+            <li class="social-icon">
+                <a href="https://mobile.twitter.com/baystizzle">
+                    <i class="fab fa-twitter fa-2x"></i>
+                </a>
+            </li>
 
-                <li class="social-icon">
-                    <a href="https://www.linkedin.com/in/adebayo-daramola-31b852b3">
-                        <i class="fab fa-linkedin fa-2x"></i>
-                    </a>
-                </li>
-            </ul>
+            <li class="social-icon">
+                <a href="https://github.com/Baystef">
+                    <i class="fab fa-github fa-2x"></i>
+                </a>
+            </li>
+
+            <li class="social-icon">
+                <a href="https://www.linkedin.com/in/adebayo-daramola-31b852b3">
+                    <i class="fab fa-linkedin fa-2x"></i>
+                </a>
+            </li>
+        </ul>
     </nav>
 
 
@@ -90,6 +90,21 @@
                             <h2 class="text-secondary">Adebayo</h2>
                             <h2 class="text-primary">I'm a</h2>
                             <h2 class="text-secondary">Web & UI Designer</h2>
+                        </div>
+                        <div class="icons">
+                            <a href="https://m.facebook.com/daramola.adebayo?ref=bookmarks">
+                                <i class="fab fa-facebook fa-2x"></i>
+                            </a>
+                            <a href="https://mobile.twitter.com/baystizzle">
+                                <i class="fab fa-twitter fa-2x"></i>
+                            </a>
+                            <a href="https://github.com/Baystef">
+                                <i class="fab fa-github fa-2x"></i>
+                            </a>
+                            <a href="https://www.linkedin.com/in/adebayo-daramola-31b852b3">
+                                <i class="fab fa-linkedin fa-2x"></i>
+                            </a>
+
                         </div>
                     </div>
                 </div>
@@ -142,7 +157,7 @@
             </h1>
             <div class="contact-details">
                 <div class="container">
-                    <form action="" method="post">
+                    <form action="mailto:daramola.adebayo@yahoo.com" method="post">
                         <input type="text" id="name" name="name" placeholder="Your Name">
                         <input type="email" name="email" id="email" placeholder="YourEmail@email.com">
                         <textarea name="subject" id="subject" placeholder="Tell me something...">
@@ -157,7 +172,7 @@
     </main>
 
     <footer>
-        <a href="freecodecamp.org/baystef" target="_blank">Daramola Adebayo</a> &copy;2018 All Rights Reserved
+        <a href="https://learn.freecodecamp.org/baystef" target="_blank">Daramola Adebayo</a> &copy;2018 All Rights Reserved
     </footer>
 
 
