--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     </main>
 
     <footer>
-        <a href="https://learn.freecodecamp.org/baystef" target="_blank">Daramola Adebayo</a> &copy;2018 All Rights Reserved
+        <a href="https://www.freecodecamp.org/baystef" target="_blank">Daramola Adebayo</a> &copy;2018 All Rights Reserved
     </footer>
 
 
