--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -131,7 +131,7 @@
                     </a>
                 </div>
                 <div class="project-tile">
-                    <a href="#">
+                    <a href="https://fylo.netlify.com">
                         <img src="img/projects/project3.jpg" alt="project">
                     </a>
                 </div>
