New project added

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -121,7 +121,7 @@
 
             <div class="projects">
                 <div class="project-tile">
-                    <a href="#">
+                    <a href="https://huddle-2.netlify.com">
                         <img src="img/projects/project1.jpg" alt="project">
                     </a>
                 </div>
