--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
             <div class="projects">
                 <div class="project-tile">
-                    <a href="#">
+                    <a href="https://huddle-2.netlify.com">
                         <img src="img/projects/project1.jpg" alt="project">
                     </a>
                 </div>
@@ -131,7 +131,7 @@
                     </a>
                 </div>
                 <div class="project-tile">
-                    <a href="#">
+                    <a href="https://fylo.netlify.com">
                         <img src="img/projects/project3.jpg" alt="project">
                     </a>
                 </div>
