--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     </a>
                 </div>
                 <div class="project-tile">
-                    <a href="#">
+                    <a href="https://fylo-2.netlify.com">
                         <img src="img/projects/project2.jpg" alt="project">
                     </a>
                 </div>
