Project 4 and 5 included

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -121,28 +121,28 @@
 
             <div class="projects">
                 <div class="project-tile">
-                    <a href="https://huddle-2.netlify.com">
-                        <img src="img/projects/project1.jpg" alt="project">
+                    <a href="https://yuhost.netlify.com">
+                        <img src="img/projects/project1.jpg" alt="project 1">
                     </a>
                 </div>
                 <div class="project-tile">
-                    <a href="https://fylo-2.netlify.com">
-                        <img src="img/projects/project2.jpg" alt="project">
+                    <a href="https://huddle-2.netlify.com">
+                        <img src="img/projects/project2.jpg" alt="project 2">
                     </a>
                 </div>
                 <div class="project-tile">
                     <a href="https://fylo.netlify.com">
-                        <img src="img/projects/project3.jpg" alt="project">
+                        <img src="img/projects/project3.jpg" alt="project 3">
                     </a>
                 </div>
                 <div class="project-tile">
-                    <a href="#">
-                        <img src="img/projects/project4.jpg" alt="project">
+                    <a href="https://fylo-3.netlify.com">
+                        <img src="img/projects/project4.jpg" alt="project 4">
                     </a>
                 </div>
                 <div class="project-tile">
-                    <a href="#">
-                        <img src="img/projects/project5.jpg" alt="project">
+                    <a href="https://fylo-2.netlify.com">
+                        <img src="img/projects/project5.jpg" alt="project 5">
                     </a>
                 </div>
             </div>
@@ -172,7 +172,8 @@
     </main>
 
     <footer>
-        <a href="https://www.freecodecamp.org/baystef" target="_blank">Daramola Adebayo</a> &copy;2018 All Rights Reserved
+        <a href="https://www.freecodecamp.org/baystef" target="_blank">Daramola Adebayo</a> &copy;2018 All Rights
+        Reserved
     </footer>
 
 
