feat(project): add new project

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/icon.png">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
         crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
@@ -55,7 +56,7 @@
             </li>
 
             <li class="social-icon">
-                <a href="https://mobile.twitter.com/baystizzle">
+                <a href="https://twitter.com/baystizzle">
                     <i class="fab fa-twitter fa-2x"></i>
                 </a>
             </li>
@@ -89,7 +90,7 @@
                             <h2 class="text-primary">My name is</h2>
                             <h2 class="text-secondary">Adebayo</h2>
                             <h2 class="text-primary">I'm a</h2>
-                            <h2 class="text-secondary">Web & UI Designer</h2>
+                            <h2 class="text-secondary">Web Developer</h2>
                         </div>
                         <div class="icons">
                             <a href="https://m.facebook.com/daramola.adebayo?ref=bookmarks">
@@ -136,14 +137,19 @@
                     </a>
                 </div>
                 <div class="project-tile">
-                    <a href="https://fylo-3.netlify.com">
-                        <img src="img/projects/project4.jpg" alt="project 4">
-                    </a>
+                        <a href="https://baystef.github.io/Quick-Credit/UI">
+                            <img src="img/projects/project4.jpg" alt="project 4">
+                        </a>
                 </div>
                 <div class="project-tile">
                     <a href="https://fylo-2.netlify.com">
                         <img src="img/projects/project5.jpg" alt="project 5">
                     </a>
+                </div>
+                <div class="project-tile">
+                        <a href="https://fylo-3.netlify.com">
+                            <img src="img/projects/project6.jpg" alt="project 6">
+                        </a>
                 </div>
             </div>
         </section>
